import { fireEvent, getByTestId } from '@testing-library/react';
import React from 'react';
import { OTPForm } from '../OTPForm';
import {
    click,
    createEvent,
    getNonNumeric,
    renderForActionDispatchTest,
    testDispatchedAction,
    testDispatchedActionsInOrder,
    testSnapshot,
} from '../../../../../tests/utils/RenderingHelpers';
import {
    LoginModalCheck,
    LoginModalInputType,
    loginModalInput,
    loginModalRemoteRequest,
} from '../redux/LoginModalAction';
import { mockAuthenticationState, mockDispatch, mockPrepareSelector } from '../../../../redux/__mocks__/mocks';
import { AuthenticationStep } from '../redux/AuthenticationState';

jest.mock('react-redux', () => ({
    ...jest.requireActual('react-redux'),
    useDispatch: () => mockDispatch,
    useSelector: () => mockPrepareSelector(),
}));

function getInput(container: HTMLElement, inputIndex: number) {
    return getByTestId(container, `OTPInput${inputIndex}`) as HTMLInputElement;
}

describe('OTPForm snapshot tests', () => {
    it('should match snapshot at OTP for user creation step without error', () => {
        mockAuthenticationState({ step: AuthenticationStep.PASSWORD_CREATION_OTP, error: null });

        testSnapshot(<OTPForm />);
    });

    it('should match snapshot at OTP for password reset step with error', () => {
        mockAuthenticationState({
            step: AuthenticationStep.PASSWORD_RESET_OTP,
            error: new Error('thisShouldNotHappen'),
        });

        testSnapshot(<OTPForm />);
    });
});

function testTypeDigitAndExpectValue(input: HTMLInputElement, typed: string, expected: string) {
    fireEvent.change(input, createEvent(typed));
    expect(input.value).toEqual(expected);
}

function renderOTPForm() {
    const container = renderForActionDispatchTest(<OTPForm />);
    const inputs = [0, 1, 2, 3, 4, 5].map((inputIndex) => {
        return getInput(container, inputIndex);
    });
    const nextButton = getByTestId(container, 'nextButton');
    return { inputs, nextButton };
}

describe('OTP input elements individual tests', () => {
    it.each([0, 1, 2, 3, 4, 5])('should enter numeric characters in OTP input number %i', (inputIndex) => {
        const { inputs } = renderOTPForm();
        const input = inputs[inputIndex];

        testTypeDigitAndExpectValue(input, '1', '1');

        testTypeDigitAndExpectValue(input, getNonNumeric(), '');
    });

    it.each([0, 1, 2, 3, 4, 5])(
        'should rewrite an existing value that has already been input in OTP input number %i',
        (inputIndex) => {
            const { inputs } = renderOTPForm();
            const input = inputs[inputIndex];

            testTypeDigitAndExpectValue(input, '3', '3');

            input.focus();

            expect(input.value).toEqual('');
        },
    );
});

describe('OTP form tests', () => {
    it.each([0, 1, 2, 3, 4])(
        'should focus on next input element when a digit is input for input %i (Only the first 5 inputs, index=0...4)',
        (inputIndex) => {
            const { inputs } = renderOTPForm();
            const input = inputs[inputIndex];
            const nextInput = inputs[inputIndex + 1];

            fireEvent.change(input, createEvent('1'));

            expect(nextInput).toHaveFocus();
        },
    );

    it('should focus on "next" button when a digit is input for last input (index = 5)', () => {
        const { inputs, nextButton } = renderOTPForm();

        testTypeDigitAndExpectValue(inputs[5], '1', '1');

        expect(nextButton).toHaveFocus();
    });

    it('should focus on the next empty input after a digit has been input', () => {
        const { inputs } = renderOTPForm();

        fireEvent.change(inputs[1], createEvent('1'));
        fireEvent.change(inputs[2], createEvent('2'));
        fireEvent.change(inputs[4], createEvent('4'));
        fireEvent.change(inputs[0], createEvent('1'));

        expect(inputs[3]).toHaveFocus();
    });
});

describe('OTP form paste tests', () => {
    it('should dispatch 3 digit value over 3 inputs', () => {
        const { inputs } = renderOTPForm();

        fireEvent.change(inputs[0], createEvent('649'));

        expect(inputs[0].value).toEqual('6');
        expect(inputs[1].value).toEqual('4');
        expect(inputs[2].value).toEqual('9');
        expect(inputs[3]).toHaveFocus();
    });

    it('should not overflow the inputs and focus on the button', () => {
        const { inputs, nextButton } = renderOTPForm();

        fireEvent.change(inputs[3], createEvent('0574'));

        expect(inputs[3].value).toEqual('0');
        expect(inputs[4].value).toEqual('5');
        expect(inputs[5].value).toEqual('7');

        expect(nextButton).toHaveFocus();
    });

    it('should not input anything if input contains a non numerical character', () => {
        const { inputs } = renderOTPForm();

        inputs[2].focus();
        fireEvent.change(inputs[2], createEvent('3e4'));

        expect(inputs[2].value).toEqual('');
        expect(inputs[3].value).toEqual('');
        expect(inputs[4].value).toEqual('');

        expect(inputs[2]).toHaveFocus();
    });

    it('should overwrite existing values in multiple inputs', () => {
        const { inputs } = renderOTPForm();

        fireEvent.change(inputs[1], createEvent('6103'));
        fireEvent.change(inputs[1], createEvent('974'));

        expect(inputs[1].value).toEqual('9');
        expect(inputs[2].value).toEqual('7');
        expect(inputs[3].value).toEqual('4');
        expect(inputs[4].value).toEqual('3');

        expect(inputs[5]).toHaveFocus();
    });
});

function inputOTPDigit(container: HTMLElement, inputIndex: number, OTPDigit: string) {
    const input0 = getInput(container, inputIndex);
    fireEvent.change(input0, createEvent(OTPDigit));
}

describe('OTP form action tests', () => {
    beforeEach(() => {
        jest.resetAllMocks();
    });

    it('should send OTP code and verification request on next button click', () => {
        const container = renderForActionDispatchTest(<OTPForm />);

        inputOTPDigit(container, 0, '2');
        inputOTPDigit(container, 1, '0');
        inputOTPDigit(container, 2, '8');
        inputOTPDigit(container, 3, '4');
        inputOTPDigit(container, 4, '7');
        inputOTPDigit(container, 5, '3');

        const nextButton = getByTestId(container, 'nextButton');
        fireEvent.click(nextButton);

        testDispatchedActionsInOrder([
            loginModalInput(LoginModalInputType.OTP, '208473'),
            loginModalRemoteRequest(LoginModalCheck.OTP),
        ]);
    });

    it('should request the OTP code again on resend OTP button click', () => {
        click(<OTPForm />, 'sendOTPAgainButton');

        testDispatchedAction(loginModalRemoteRequest(LoginModalCheck.NONE));
    });
});
